knowledgeCity0610/common/log/oldLog/runall_p8436.log.error.log
[CRITICAL]2021-05-08 13:55:28,788: import main_akmCtrl failed, path: autoCtrl cause a error: invalid syntax (runTasks.py, line 981)
pid=8436, ppid=12896, tid=11220
Traceback (most recent call last):
  File "run_all.py", line 39, in findModule
    __import__(m[1])
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\autoCtrl\main_akmCtrl.py", line 18, in <module>
    import deviceCtrl
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\autoCtrl\deviceCtrl.py", line 22, in <module>
    import runTasks
  File "C:\Users\comba\Desktop\知识城地牛\knowledgeCity\autoCtrl\runTasks.py", line 981
    if agvId == 'AGV02'
                      ^
SyntaxError: invalid syntax

[CRITICAL]2021-05-08 13:55:28,791: import main_akmCtrl failed, path: autoCtrl ,cause invalid syntax (runTasks.py, line 981)
